# SFPanel

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  web.go
.claude/: settings.json
.github/workflows/: ci.yml  release-desktop.yml  release.yml
cmd/sfpanel/: cluster_commands.go  cluster_commands_test.go  main.go  watchdog.go
configs/: config.example.yaml  logrotate.conf
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: migration-plan.md
docs/plans/: 2026-02-25-sfpanel-design.md  2026-02-25-sfpanel-implementation.md  2026-02-27-firewall-design.md  2026-02-27-firewall-implementation.md  2026-03-06-phase2-3-4-improvements.md  2026-03-06-self-management-design.md  2026-03-06-self-management.md  2026-03-10-appstore-design.md  2026-03-10-appstore-implementation.md  2026-03-13-cluster-design.md  2026-03-14-mobile-responsive-design.md  2026-03-14-mobile-responsive-impl.md
docs/specs/: api-spec.md  cluster-ops.md  cluster-partition-runbook.md  db-schema.md  frontend-spec.md  tech-features.md  websocket-spec.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: cluster-lifecycle.spec.ts  cluster-password-replication.spec.ts  connect-port.spec.ts  (+4 more)
proto/: cluster.proto
scripts/: install.sh
web/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+405 files in other folders)
